--- a/assets/devibeans-Dy4Tnppb.css
+++ b/assets/devibeans-Dy4Tnppb.css
@@ -1,4 +1,4 @@
-.page-view[data-v-2dedf12c]{width:100%;background-color:var(--bg-color);color:var(--text-base)}uni-view[data-v-2dedf12c],uni-text[data-v-2dedf12c]{transition:color background-color .3s}pre code.hljs{display:block;overflow-x:auto;padding:1em}code.hljs{padding:3px 5px}/*!
+.page-view[data-v-5a2c4751]{width:100%;background-color:var(--bg-color);color:var(--text-base);min-height:100vh;min-height:calc(100vh - 44px)}uni-view[data-v-5a2c4751],uni-text[data-v-5a2c4751]{transition:color background-color .3s}pre code.hljs{display:block;overflow-x:auto;padding:1em}code.hljs{padding:3px 5px}/*!
     Theme: devibeans (dark)
     Author: @terminaldweller
     Maintainer: @terminaldweller
